prevent button wrapping on guide

--- a/web3/static/css/guide.css
+++ b/web3/static/css/guide.css
@@ -36,6 +36,7 @@
     border: 1px solid #ddd;
     border-radius: 3px;
     color: #484848;
+    white-space: nowrap;
 }
 @media (max-width: 767px) {
     .guide {
